<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.newletseduvate.model.online_class.OnlineClassStudentOcDetailsModifiedModel" />

        <import type="android.view.View" />
    </data>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/root"
        style="@style/Common.CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_subject_name"
                style="@style/TextStyleHeadMediumBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{model.date}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_accept"
                style="@style/Common.PositiveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:visibility="@{model.isAcceptVisible ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toStartOf="@+id/btn_reject"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_subject_name" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_reject"
                style="@style/Common.NegativeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reject"
                android:visibility="@{model.isAcceptVisible ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/btn_accept"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_accept"
                app:layout_constraintTop_toTopOf="@+id/btn_accept" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_join"
                style="@style/Common.PositiveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join"
                android:visibility="@{model.isJoinEnabled() ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_reject" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_rejected"
                style="@style/TextStyleContentMediumBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rejected"
                android:layout_margin="@dimen/dimen_10dp"
                android:textColor="#D63131"
                android:visibility="@{model.isRestricted ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_join" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>