<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="model"
            type="com.newletseduvate.model.blog.StudentBlogModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_genre"
                style="@style/Common.TextInputLayout"
                android:layout_width="@dimen/dimen_size_0_dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:focusable="true"
                    android:focusableInTouchMode="false"
                    android:hint="@string/genre"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_blog_title"
                style="@style/Common.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/til_genre">

                <EditText
                    android:id="@+id/et_blog_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/blog_title"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="14sp"
                    android:inputType="text"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>

            <include
                android:id="@+id/et_blog_text"
                layout="@layout/rich_editor_element_modified"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/til_blog_title" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView11"
                style="@style/TextStyleContentMediumBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/add_thumbnail"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/et_blog_text" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView11" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_upload_photo"
                style="@style/Common.OutlinedMaterialButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Upload thumbnail"
                app:layout_constraintEnd_toStartOf="@+id/btn_draft"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/rv_list" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                style="@style/Common.NormalButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                app:layout_constraintEnd_toStartOf="@+id/btn_draft"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/btn_upload_photo" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_draft"
                style="@style/Common.NormalButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/draft"
                app:layout_constraintBottom_toBottomOf="@+id/btn_submit"
                app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_submit"
                app:layout_constraintTop_toTopOf="@+id/btn_submit" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>